--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?okaixsl#1" target="_blank">首页</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/1?oaoacju" target="_blank">动态网</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/2?rmhojh" target="_blank">大纪元</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/4?ukkmbv" target="_blank">看中国</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/pHh5q?qeowee" target="_blank">新生网</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/tktpt?ixexer" target="_blank">阿波罗网</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/Mjpvu?nbbzc" target="_blank">干净世界</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/10?ihjkirds" target="_blank">退党服务</a> | <a href="https://d2184d78prq5kd.cloudfront.net/Rffqf?welamycyv" target="_blank">明慧广播</a> | <a href="https://dycg1eql8aigr.cloudfront.net/nw9Vn?oehhowb" target="_blank">传奇时代</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/AF9AG?ubtapu" target="_blank">新境界影视</a> | <a href="https://d3caox32lipp7h.cloudfront.net/zqMQA?daoislgss" target="_blank">文昭谈论</a> | <a href="https://d15m60lsma25jk.cloudfront.net/7?ckmmujo" target="_blank">明慧</a></p><p><a href="https://d1or6b2roqil0x.cloudfront.net/9?vfgeda" target="_blank">大法</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/3?obgbpoyb" target="_blank">新唐人</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/obAhT?dlgprc" target="_blank">人民报</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/xXNHu?rnneiidtk" target="_blank">放光明</a> | <a href="https://dervszfjn9udk.cloudfront.net/5?kzoagu" target="_blank">新纪元</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/6?ppckmgkve" target="_blank">希望之声</a> | <a href="https://doh73o6c3dnba.cloudfront.net/11?pttmvyid" target="_blank">无界网络</a> | <a href="https://d37g5boc7rm625.cloudfront.net/Pueji?zhbzft" target="_blank">追查国际</a> | <a href="https://dep6yudto3kbo.cloudfront.net/16?mtswebp" target="_blank">明慧之窗</a> | <a href="https://d3twnfu6dd6xpm.cloudfront.net/LdvzZ?eppcllod" target="_blank">细语人生</a> | <a href="https://d14a0yccee2yym.cloudfront.net/fBn3r?xrduyt" target="_blank">新世纪影视</a> | <a href="https://d124e4v75n9sum.cloudfront.net/PUWMb?bwlhg" target="_blank">江峰时刻</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/8?khiiy" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?wnaowmj#1" target="_blank">首页</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/1?wazyaqolb" target="_blank">动态网</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/2?dwxbocut" target="_blank">大纪元</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/4?cwqmgij" target="_blank">看中国</a> | <a href="https://d3abchfok6e2j.cloudfront.net/pHh5q?thfdia" target="_blank">新生网</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/tktpt?ygkctge" target="_blank">阿波罗网</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/Mjpvu?wuikf" target="_blank">干净世界</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/10?uaknn" target="_blank">退党服务</a> | <a href="https://d2torrlf4djx10.cloudfront.net/Rffqf?eyzjrkhod" target="_blank">明慧广播</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/nw9Vn?nufcz" target="_blank">传奇时代</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/AF9AG?ygrfj" target="_blank">新境界影视</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/zqMQA?bupko" target="_blank">文昭谈论</a> | <a href="https://dld25pfif4r64.cloudfront.net/7?nxzpojm" target="_blank">明慧</a></p><p><a href="https://d324e5bfxb7dri.cloudfront.net/9?ddvqw" target="_blank">大法</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/3?xpouw" target="_blank">新唐人</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/obAhT?hoocrpu" target="_blank">人民报</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/xXNHu?xvumoiun" target="_blank">放光明</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/5?ipnlh" target="_blank">新纪元</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/6?spwkbeum" target="_blank">希望之声</a> | <a href="https://d3vg08phoazui6.cloudfront.net/11?bdtfwtw" target="_blank">无界网络</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/Pueji?yyrrqeu" target="_blank">追查国际</a> | <a href="https://dfxrfb9070id6.cloudfront.net/16?lobbja" target="_blank">明慧之窗</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/LdvzZ?efiujvy" target="_blank">细语人生</a> | <a href="https://d2p23c289x62lr.cloudfront.net/fBn3r?uwbjkww" target="_blank">新世纪影视</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/PUWMb?gfrzjmcd" target="_blank">江峰时刻</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/8?nyump" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290154-GettyImages-2161923146-320x200.jpg"><p align="center">【更新】川普中枪 FBI定调“暗杀未遂”</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1" title="【更新】川普中枪 FBI定调“暗杀未遂”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290154-GettyImages-2161923146-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290177.md#1" title="组图：川普在集会上遇刺受伤 另有1死2伤""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290213-GettyImages-2161929835-320x200.jpg">&nbsp;</a>
@@ -13,18 +13,17 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289698.md#1" title="国会议员：美两党与法轮功站一起 捍卫自由""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288949-LDB2183-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289574.md#1" title="颠覆三大认知 中国学生和移民认识真实美国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14270395-Shutterstock_2142178205-700x420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290078.md#1">令美第六代战机如虎添翼 XQ-67A首飞视频曝光</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290279.md#1">女童去世 鲁殡仪馆8个花篮收1.38万惹议</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290078.md#1">令美第六代战机如虎添翼 XQ-67A首飞视频曝光</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290194.md#1">川普突遭枪击 目击者：枪手在爬屋顶</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290300.md#1">FBI：枪击事件是针对川普的暗杀未遂案</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290300.md#1">FBI：枪击事件是针对川普的暗杀未遂案</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1">【更新】川普中枪 FBI定调“暗杀未遂”</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290094.md#1">为何Trader Joe&#8217;s一款热销品在韩国是违禁品</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290279.md#1">山东女童去世 殡仪馆8个花篮收1.3万惹议</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290278.md#1">学生改性别须瞒家长 南加律师疾呼拦下危险法案</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290275.md#1">父亲遇袭 四子女发声明 川普：我永不投降</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290278.md#1">学生改性别须瞒家长 南加律师疾呼拦下危险法案</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290275.md#1">父亲遇袭 四子女发声明 川普：我永不投降</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288924.md#1">山东女子180万卖房120万买回 民：亏大了</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289354.md#1">中共太子党动向密集曝光 胡耀邦孙女任新职</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br>
@@ -34,6 +33,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289384.md#1">曾指江泽民有三怕 胡耀邦智囊阮铭在美辞世</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289269.md#1">中国PPI逾十年多轮负增长 专家析危机</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241958.md#1">【特稿】人类起源问题的终极答案</a><br>
@@ -53,7 +53,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289943.md#1">中共三中全会将开 观察家纷纷看衰前景</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289698.md#1">国会议员：美两党与法轮功站一起 捍卫自由</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290242.md#1">【翻墙必看】目击者谈川普被“即时袭击”</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290279.md#1">山东女童去世 殡仪馆8个花篮收1.3万惹议</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290279.md#1">女童去世 鲁殡仪馆8个花篮收1.38万惹议</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290076.md#1">亚洲首富之子的婚礼为何如此盛大和高调</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290243.md#1">共和党候选人：我从前排目睹对川普的袭击</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290252.md#1">川普期待参加共和党大会 据报他已出院</a><br>
@@ -114,7 +114,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 433,160,043 人
+!共 433,161,808 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278873-GettyImages-83609934-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289988.md#1">租客朋友暂住未报官 深圳房东遭罚 网民吃惊</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290161-0871803e3e4904d28f2888df24f481ef-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289709.md#1">金华首富女婿叹大陆前沿企业也内卷</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289644.md#1">中国电商价格战激烈 卖家难以维持生计</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289999-dd7ab702e8b35709dc885ac3-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290013.md#1">台海巡队强化淡水河防务 遏止中共快艇闯入</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289976.md#1">记者揭油罐车黑幕后失联 中共被批解决提问人</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289769.md#1">北京突降暴雨 一秒白天变黑夜 连发六预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288843.md#1">谐星傅子明猝逝 沪语歌《做人难》曾爆红上海滩</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288365.md#1">重庆河水倒灌村民被困 三峡水库今年首度泄洪</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287826.md#1">湖南民众：村里很多年轻人离奇死亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290228-7296066ff825d0fad4e91ba4e2c7f6d4-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289908.md#1">失业潮下 四川大学拟撤31个专业 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
